# plover_fancytext

./: README.md  README.rst  requirements.txt  setup.cfg  sfraj.txt
.github/workflows/: python-app.yml  release.yml  tests-linting.yml
plover_fancytext/: character_helpers.py  common.py  crytyping.py  extensionplugin.py  fancybase.py  fancytext.py  figlet.py  formatterbase.py  randomcap.py  retro.py  sarcasm.py  substitute.py  testExtensionPlugin.py  testPloverPlugin.py  testRetro.py  testSarcasm.py  testZalgo.py  upside.py  uwu.py  zalgo.py
plover_memetext/: memetext.py  sarcasm.py  zalgo.py
