[metadata]
name = plover_fancytext
version = 1.3.0
description = Silly output formatting plugin for Plover
long_description = file: README.rst
author = Seth Rider
author_email = seth.rider@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/psethwick/plover_fancytext
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages =
    plover_fancytext

[options.entry_points]
plover.extension = plover_fancytext = plover_fancytext.extensionplugin:ExtensionPlugin
plover.meta = fancytext_retro = plover_fancytext.retro:fancytext_retro
